# zone51

./: .gitignore  README.md  constraints.cpp  counted_ptr.cpp  derived_traits2.cpp  derived_traits3.cpp  fixed_vecror.cpp  vector.cpp
Mathematica/: .Abbriviations.nb.icloud  .Fractals.nb.icloud  .TriangulationExperements.nb.icloud  Abbriviations.nb  Fractals.nb  TriangulationExperements.nb
boost-cookbook/11_strings/: CMakeLists.txt  cases.cpp  grep.cpp
boost-cookbook/13_graphs/: CMakeLists.txt  graph.cpp
build-opengl-Desktop-Debug/: Makefile
comptheory/: ex1.rb  ex2.rb  state_machine.rb
etc/: pointer_to_member.cpp
fsharp/: hello-fsharp.fs
haskell/: .1.1_lstTemplate.hs.icloud  .1.Exs_1-10.hs.icloud  .2.1_Subsets.hs.icloud  .2.3_Data.hs.icloud  .2.4-_Function_declaration.hs.icloud  .2.4_Control_statements.hs.icloud  .2.5_Generators.hs.icloud  .3.1-2.Ex.hs.icloud  .3.3-6.Ex.hs.icloud  .3.3_Types.hs.icloud  .4.3_FileIO.hs.icloud  .4.Ex_4.4.hs.icloud  1.1_lstTemplate.hs  1.Exs_1-10.hs  2.1_Subsets.hs  2.3_Data.hs  2.4-_Function_declaration.hs  2.4_Control_statements.hs  2.5_Generators.hs  3.1-2.Ex.hs  3.3-6.Ex.hs  3.3_Types.hs  4.3_FileIO.hs  4.Ex_4.4.hs
java/: helloworld.java
meyers/meyers/: .CMakeLists.txt.user.3.3-pre1.icloud  CMakeLists.txt  CMakeLists.txt.user.18  CMakeLists.txt.user.3.3-pre1  basics.cpp  decltype.cpp  functional.cpp  modern.cpp  modifiers.cpp  smartpointers.cpp  threads.cpp  type_deduction.cpp
objc/: basic_objects.m  first_steps.m  second_steps.m
opengl/: .opengl.pro.icloud  .opengl.pro.user.3.3-pre1.icloud  opengl.pro  opengl.pro.user.3.3-pre1
opengl-ex/00/: CMakeLists.txt
porub/: .1.1_Clock.tests.icloud  .1.2_Subseq_with_equal_sums.tests.icloud  1.1 Clock.cpp  1.1 Clock.tests  1.1_Clock.cpp  1.1_Clock.tests  1.2_Subseq_with_equal_sums.cpp  1.2_Subseq_with_equal_sums.tests
prolog/: courses.pl  family.pl
ruby/: 000_hello_ruby.rb  001_ruby_obj.rb
rust/: .floo  .generic.rs.icloud  .gitignore  .modules.rs.icloud  .pattern_matching.rs.icloud  .tuples.rs.icloud  .unit.rs.icloud  FLOOBITS_README.md  generic.rs  modules  modules.rs  pattern_matching  pattern_matching.rs  tuples  tuples.rs  unit.rs
rwhaskell/: .00.WC.hs.icloud  .comandLine.hs.icloud  .data.hs.icloud  .ex1.hs.icloud  .gitignore  .test.hs.icloud  00.WC.hs  comandLine.hs  data.hs  ex1.hs  test.hs
satter/: case_insensetive_string.cpp  container.cpp  derived_traits.cpp  mastermind.cpp  predicate.cpp  predicats.cpp  traits.cpp
sicp/: .000.scm.icloud  .blocs.scm.icloud  .change.scm.icloud  .complex.rkt.icloud  .compose.scm.icloud  .data.scm.icloud  .ferma.scm.icloud  .haffman.rkt.icloud  .intervals.scm.icloud  .lambda.scm.icloud  .list.scm.icloud  .matrixs.scm.icloud  .mutators.scm.icloud  .nested-maps.rkt.icloud  .objects.scm.icloud  .pure.scm.icloud  .queue.scm.icloud  .requr-tasks.scm.icloud  .requr.scm.icloud  .sqrt.scm.icloud  .strings.rkt.icloud  .symbol-deriving-infix.rkt.icloud  .symbol-deriving.rkt.icloud  .transform.scm.icloud  .tree2.scm.icloud  .trees.scm.icloud  000.scm  blocs.scm  change.scm  complex.rkt  compose.scm  data.scm  ferma.scm  haffman.rkt  intervals.scm  lambda.scm  list.scm  (+16 more)
(+418 files in other folders)
