project(meyers)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
aux_source_directory(. SRC_LIST)
add_executable(Basics basics.cpp)
add_executable(TypeDeduction type_deduction.cpp)
add_executable(DeclType decltype.cpp)
add_executable(Modern modern.cpp)
add_executable(Modifiers modifiers.cpp)
add_executable(SmartPointers smartpointers.cpp)
add_executable(Functional functional.cpp)

find_package(Threads)
add_executable(threads threads.cpp)
target_link_libraries(threads ${CMAKE_THREAD_LIBS_INIT})
